# rfid-workflow

./: .gitignore  .public-audit-private-patterns.example.txt  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Install-RFID-GUI.bat  Install-RFID-GUI.ps1  LICENSE  PRIVACY.md  README.md  SECURITY.md  Start-RFID-GUI.bat  Start-RFID-GUI.ps1  THIRD_PARTY_NOTICES.md  public-export-manifest.txt  pyproject.toml
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  BACKUPS_AND_TEMPLATES.md  CLAUDE_DESIGN_BACKUPS_STARTUP_BRIEF.md  CLI_USAGE.md  COMPATIBILITY.md  DEVELOPMENT.md  DISCOVERY_REPORT.md  FIRST_RUN.md  GUI_READONLY_MVP.md  HITAG_S256_WORKFLOW.md  INSTALL_WINDOWS.md  LICENSE_NOTES.md  PM3_COMMANDS_DISCOVERY.md  PM3_GRAPH_VIEWER_TEST.md  PM3_SETUP_AND_FLASHING.md  PRODUCT_SCOPE.md  PROXMARK_SETUP.md  PUBLIC_EXPORT_AUDIT.md  PUBLIC_REPOSITORY_AUDIT.md  PUBLIC_SOURCE_EXPORT.md  RELEASE_PROCESS.md  SAFETY_AND_AUTHORIZATION.md  SUPPORTED_TECHNOLOGIES.md  TECHNICAL_INTEGRITY.md  TROUBLESHOOTING.md
pm3_workflow_gui/: __init__.py
scripts/: doctor.ps1  install-windows.ps1  prepare-public-export.ps1  run.ps1
tests/: test_capture_providers.py  test_discovery_facade_cli.py  test_hitag_s256_parser.py  test_hitag_s256_workflow_fixtures.py  test_live_hitag_read.py  test_live_pm3_readonly.py  test_main_entrypoint.py  test_pm3_discovery_parsers.py  test_pm3_doctor.py  test_pm3_launch_config.py  test_profile_schema.py  test_public_export.py  test_public_repo_audit.py  test_scan_evidence.py  test_settings_store.py  test_ui_viewmodel.py  test_web_desktop_assets.py  (+3 more)
(+81 files in other folders)
