[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pm3-workflow-gui"
version = "0.1.0"
description = "Authorized Proxmark3/Iceman workflow GUI scaffold"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Source-available use-only; see LICENSE" }
authors = [{ name = "Internal tooling" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
gui = ["pywebview>=6.2"]

[project.scripts]
pm3-workflow-gui = "pm3_workflow_gui.main:main"
pm3-workflow = "pm3_workflow_gui.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
